<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="main_screen">Главная</string>
    <string name="favourite">Избранное</string>
    <string name="team">Команда</string>
    <string name="team_1">Егор Тарасов</string>
    <string name="team_2">Дмитрий Гнесный</string>
    <string name="team_3">Варвара Новоселецкая</string>
    <string name="team_4">Сергей Кравцов</string>
    <string name="working_on_app">Над приложением работали</string>
    <string name="empty_salary">Зарплата не указана</string>
    <string name="min_salary">от %1$s %2$s</string>
    <string name="max_salary">до %1$s %2$s</string>
    <string name="can_not_get_vacancies">Не удалось получить список вакансий</string>
    <string name="no_internet_connection">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="no_vacancies">Таких вакансий нет</string>
    <string name="vacancy">Вакансия</string>
    <string name="vacancy_experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="vacancy_obligations">Обязанности</string>
    <string name="vacancy_requirement">Требования</string>
    <string name="vacancy_conditions">Условия</string>
    <string name="vacancy_skills">Ключевые навыки</string>
    <string name="industry">Сфера деятельности</string>
    <string name="error_empty_vacancy">Вакансия не найдена или удалена</string>
    <string name="description">Над приложением работали</string>

    <string name="hint_edit_search">Введите запрос</string>

    <string name="filter_settings_fragment">Настройки фильтрации</string>
    <string name="job_location">Место работы</string>
    <string name="vacancy_type">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_a_sum">Введите сумму</string>
    <string name="do_not_show_without_salary">Не показывать без зарплаты</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="country_and_region">%1$s, %2$s</string>
    <string name="filter_industry_fragment">Выбор отрасли</string>
    <string name="industry_hint">Введите отрасль</string>
    <string name="empty_list_error">Не удалось получить список</string>
    <string name="save_button_title">Выбрать</string>
    <string name="failed_to_find_industry">Такой отрасли нет</string>
    <string name="choosing_place_of_work">Выбор места работы</string>
    <string name="country">Страна</string>
    <string name="choosing_place_work">Выбор места работы</string>
    <string name="region">Регион</string>
    <string name="choose">Выбрать</string>
    <string name="choosing_region">Выбор региона</string>
    <string name="hint_edit_region">Введите регион</string>

</resources>
