<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorPrimaryVariant"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="22sp"
            android:text="@string/team" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="32sp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/lead"
            style="@style/Developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_1" />

        <TextView
            android:id="@+id/oldwise"
            style="@style/Developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_2" />

        <TextView
            android:id="@+id/flash"
            style="@style/Developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_3" />

        <TextView
            android:id="@+id/meister"
            style="@style/Developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_4" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>
