<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:importantForAccessibility="no"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/text_filter_settings_fragment_title"
            style="@style/Text.Medium.22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:text="@string/choosing_place_work" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country_input_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:textColorHint="?attr/colorOnSurfaceInverse"
        app:boxBackgroundColor="?attr/colorSurface"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/ic_arrow_forward"
        app:endIconMode="custom"
        app:endIconTint="?attr/colorOnSurfaceInverse"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:placeholderText="@string/country"
        app:placeholderTextColor="?attr/colorTextAlt">

        <AutoCompleteTextView
            android:id="@+id/country_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/country"
            android:inputType="none"
            android:textAppearance="@style/Text.Regular.16"
            android:textColor="?attr/colorOnSurfaceInverse"
            android:textColorHint="?attr/colorTextAlt" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regio_input_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginStart="@dimen/_16dp"
        android:textColorHint="?attr/colorOnSurfaceInverse"
        app:boxBackgroundColor="?attr/colorSurface"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/ic_arrow_forward"
        app:endIconMode="custom"
        app:endIconTint="?attr/colorOnSurfaceInverse"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_input_layout"
        app:placeholderText="@string/region">

        <AutoCompleteTextView
            android:id="@+id/region_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/region"
            android:inputType="none"
            android:textAppearance="@style/Text.Regular.16"
            android:textColor="?attr/colorOnSurfaceInverse"
            android:textColorHint="?attr/colorOnSurfaceVariantAlt" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_choose"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_24dp"
        android:background="@drawable/blue_button_bg"
        android:elevation="0dp"
        android:text="@string/choose"
        android:textAppearance="@style/Text.Medium.16"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regio_input_layout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
